--- a/app/src/main/res/layout/layout_person_avatar.xml
+++ b/app/src/main/res/layout/layout_person_avatar.xml
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:background="@color/geyser"
             android:scaleType="centerCrop"
-            app:imageUrl="@{path}"
+            app:imageUrlAvatar="@{path}"
             tools:src="@tools:sample/avatars" />
     </androidx.cardview.widget.CardView>
 </layout>
