--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,8 +46,8 @@
     </fragment>
     <dialog
         android:id="@+id/bottomSheetFragment"
-        android:name="com.example.cinemates.view.ui.details.movie.BottomSheetFragment"
-        tools:layout="@layout/fragment_bottomsheet"
+        android:name="com.example.cinemates.view.ui.details.movie.ManageBottomSheetFragment"
+        tools:layout="@layout/fragment_manage_bottomsheet"
         android:label="BottomSheetFragment"/>
     <fragment
         android:id="@+id/movieDetailsFragment"
