--- a/app/src/main/res/layout/list_item_filter.xml
+++ b/app/src/main/res/layout/list_item_filter.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools">
-
-    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="150dp"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+<data>
+    <variable
+        name="filter"
+        type="com.example.cinemates.model.data.Filter" />
+</data>
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="200dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_height="100dp"
@@ -18,10 +23,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginHorizontal="10dp"
                 android:autoSizeMaxTextSize="24sp"
-                android:autoSizeMinTextSize="12sp"
+                android:autoSizeMinTextSize="10sp"
+                android:maxLines="4"
+                android:text="@{filter.name}"
                 android:textAlignment="textStart"
                 android:textSize="24sp"
                 tools:text="@tools:sample/cities" />
