--- a/app/src/main/res/menu/menu_customizable_fragment.xml
+++ b/app/src/main/res/menu/menu_customizable_fragment.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
+    <!--<item
         android:id="@+id/menu_filter"
         android:icon="@drawable/ic_baseline_filter_list_24"
         android:iconTint="@color/geyser"
         android:title="Filter"
-        app:showAsAction="always" />
+        app:showAsAction="always" />-->
     <item
         android:id="@+id/menu_switch_list"
         android:icon="@drawable/ic_round_view_list_24"
